--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "type": "git",
     "url": "https://github.com/cuderbot/personal-webpage-backend"
   },
-  "main": "src/index.js",
+  "main": "src/server.js",
   "scripts": {
-    "serve": "nodemon --exec babel-node .",
     "start": "node .",
+    "dev": "nodemon .",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
     "format": "prettier --write \"src/**/*.js\"  \"test/**/*.js\"",
@@ -23,14 +23,14 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "apollo-server": "^2.19.2",
-    "apollo-server-express": "^2.19.2",
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "graphql": "^15.5.0",
-    "joi": "^17.4.0",
-    "monk": "^7.3.3"
+    "jsonwebtoken": "^8.5.1",
+    "monk": "^7.3.3",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
@@ -43,28 +43,5 @@
     "lint-staged": "^10.5.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js"
-    ],
-    "rootDir": "test/unit",
-    "testRegex": ".*\\.(spec|test)\\.js$",
-    "collectCoverageFrom": [
-      "**/*.js"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "yarn jest --bail --coverage --findRelatedTests"
-    ]
   }
 }
