--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "https://github.com/cuderbot/personal-webpage-backend"
   },
-  "main": "src/server.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node .",
     "dev": "nodemon .",
@@ -28,6 +28,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "http-status": "^1.5.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "monk": "^7.3.3",
