--- a/package.json
+++ b/package.json
@@ -22,6 +22,24 @@
     "test": "jest",
     "test:watch": "jest --watch"
   },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "es6": true,
+      "node": true,
+      "jest": true
+    },
+    "ignorePatterns": [".eslintrc.js"],
+    "extends": ["plugin:prettier/recommended"],
+    "parserOptions": {
+      "ecmaVersion": 8,
+      "sourceType": "module"
+    },
+    "rules": {
+      "no-console": "warn",
+      "no-debugger": "warn"
+    }
+  },
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all"
