--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     }
   },
   "lint-staged": {
-    "*.{js}": [
+    "{src/|test/}/**/*.js": [
       "eslint --fix",
       "yarn jest --bail --coverage --findRelatedTests"
     ]
