feat(mongo): changing monk by mongoose

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,12 @@ NODE_ENV=development
 HOST=0.0.0.0
 PORT=3000
 
+# JWT
+JWT_SECRET=algo
+JWT_ALGORITHM=HS256
+JWT_EXPIRES=
+
 # Mongo
-MONGO_URI=mongodb://localhost:27017/personal-webpage
+MONGO_HOST=localhost
+MONGO_PORT=27017
+MONGO_DB=personal-webpage
